@@ -3,6 +3,9 @@ Version 1.12.0+dev:
    * Big Animals Micro AI: bug fix for units not attacking when [avoid_unit] is
      not set
    * Lurkers MAI: bug fix for attack error when lurker runs into ambush
+ * Campaigns
+   * Son of the Black Eye:
+     * S6 Black Flag: reduce randomness of unit types unloading from galleons
  * Editor:
    * Fixed falcon race missing an icon due to having incorrectly-named image
      files.
